syntax = "proto3";

package kong.admin.service.v1;

import "google/api/annotations.proto";
import "kong/admin/model/v1/cluster.proto";
import "kong/admin/model/v1/pagination.proto";
import "kong/admin/model/v1/plugin_schema.proto";

option go_package = "github.com/kong/koko/internal/gen/kong/admin/service/v1;v1";

service PluginSchemaService {
  rpc CreateLuaPluginSchema(CreateLuaPluginSchemaRequest) returns (CreateLuaPluginSchemaResponse) {
    option (google.api.http) = {
      post: "/v1/plugin-schemas/lua"
      body: "item"
    };
  }
  rpc GetLuaPluginSchema(GetLuaPluginSchemaRequest) returns (GetLuaPluginSchemaResponse) {
    option (google.api.http) = {
      get: "/v1/plugin-schemas/lua/{name}"
    };
  }
  rpc ListLuaPluginSchemas(ListLuaPluginSchemasRequest) returns (ListLuaPluginSchemasResponse) {
    option (google.api.http) = {
      get: "/v1/plugin-schemas/lua"
    };
  }
  rpc UpsertLuaPluginSchema(UpsertLuaPluginSchemaRequest) returns (UpsertLuaPluginSchemaResponse) {
    option (google.api.http) = {
      put: "/v1/plugin-schemas/lua/{name}"
      body: "item"
    };
  }
}

message CreateLuaPluginSchemaRequest {
  model.v1.PluginSchema item = 1;
  model.v1.RequestCluster cluster = 2;
}

message CreateLuaPluginSchemaResponse {
  model.v1.PluginSchema item = 1;
}

message GetLuaPluginSchemaRequest {
  string name = 1;
  model.v1.RequestCluster cluster = 2;
}

message GetLuaPluginSchemaResponse {
  model.v1.PluginSchema item = 1;
}

message ListLuaPluginSchemasRequest {
  model.v1.RequestCluster cluster = 1;
  model.v1.PaginationRequest page = 2;
}

message ListLuaPluginSchemasResponse {
  repeated model.v1.PluginSchema items = 1;
  model.v1.PaginationResponse page = 2;
}

message UpsertLuaPluginSchemaRequest {
  string name = 1;
  model.v1.PluginSchema item = 2;
  model.v1.RequestCluster cluster = 3;
}

message UpsertLuaPluginSchemaResponse {
  model.v1.PluginSchema item = 1;
}
